--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "marked": "^14.1.2",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@types/node": "^20",
