--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.11.1",
     "gray-matter": "^4.0.3",
     "hugeicons-react": "^0.3.0",
+    "lucide-react": "^0.460.0",
     "marked": "^14.1.2",
     "next": "14.2.13",
     "react": "^18",
