--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
+    "react-share": "^5.1.1",
+    "react-share-social": "^0.1.60",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.1",
     "rehype-pretty-code": "^0.14.0",
